# oldland-kernel

./: CMakeLists.txt  README  buildid.s  bzero.s  common.h  common.s  help.s  kernel.s  link.x  memcpy.s  printk.c  printk.h  putu.s  readmbr.c  readmbr.s  shell.h  shell.s  shelldefs.s  strcmp.s  string.c  string.h  string.s  uart.s
src/: buildid.c  cpuinfo.c  entry.s  kernel.c  link.x  printk.c  readmbr.c  reset.c  shell.c  string.h
